feat: implements register API

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -22,7 +22,8 @@
     "strictPropertyInitialization": false,
     "paths": {
       "~/*": ["./src/*"],
-      "@config/*": ["./config/*"]
+      "@config/*": ["./config/*"],
+      "@test/*": ["./test/*"]
     },
     "allowJs": true,
     "moduleResolution": "node",
