--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
+    "expo-checkbox": "~2.3.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
