fix: update CI and package.json

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint \"src/**/*.{ts, tsx}\" --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
