--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint \"src/**/*.{ts, tsx}\" --no-error-on-unmatched-pattern"
+    "lint": "eslint \"src/**/*.{ts, tsx}\" --no-error-on-unmatched-pattern",
+    "types:check": "tsc --noEmit --pretty"
+
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
