--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web",
     "lint": "eslint \"src/**/*.{ts, tsx}\" --no-error-on-unmatched-pattern",
     "types:check": "tsc --noEmit --pretty"
-
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -23,12 +22,13 @@
     "expo": "~48.0.10",
     "expo-checkbox": "~2.3.1",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
-    "react-native-reanimated": "2.14.4",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-siblings": "^4.1.1",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "4.5.0",
